<resources>
    <string name="app_name">Popular Movies</string>
    <string name="not_available">Not Available</string>
    <string name="not_rated">Not Rated</string>
    <string name="movie_image">Movie Image</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="top_movies">Top Movies</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="no_data">Data is not available</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="release_year">Release Year</string>
    <string name="rating">Rating</string>
    <string name="movie_overview">Movie Overview</string>
    <string name="error_loading_movies_title">Loading Movies Error</string>
    <string name="error_loading_movies_message">Failed to retrieve movies from TheMovieDB.org.\nPlease check the network connection and try again later.</string>
    <string name="try_again">Try again</string>
    <string name="movie_detail_activity">Movie Details</string>
    <string name="trailers">Trailers:</string>
    <string name="trailer">Trailer %1$s</string>
    <string name="reviews">Reviews:</string>
    <string name="author">Author:</string>
    <string name="favorite">Favorite</string>
    <string name="show_more_reviews">Show more reviews</string>
    <string name="no_trailers_available">No trailers available</string>
    <string name="no_reviews_available">No reviews available</string>
    <string name="no_web_browser_available">No Web browser available to display the movie trailer.</string>
</resources>
