<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/page_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="28dp">

        <TextView
            android:id="@+id/tv_title"
            style="@style/Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/titleBackground"
            android:gravity="center|start"
            android:paddingStart="28dp"
            android:paddingTop="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="28dp"
            android:text="@string/not_available"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Chappie" />

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/movie_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:srcCompat="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_release_year"
            style="@style/LargeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/release_year"
            android:text="@string/not_available"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            app:layout_constraintTop_toTopOf="@+id/iv_poster"
            tools:text="2015" />

        <TextView
            android:id="@+id/tv_rating"
            style="@style/MediumHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/rating"
            android:text="@string/not_rated"
            app:layout_constraintStart_toStartOf="@+id/tv_release_year"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_year"
            tools:text="8.1/10" />

        <TextView
            android:id="@+id/tv_overview"
            style="@style/RegularText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/movie_overview"
            android:text="@string/not_available"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster"
            tools:text="Every child comes into the world ..." />

        <View
            android:id="@+id/divider_trailers"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

        <TextView
            android:id="@+id/tv_trailers"
            style="@style/MediumHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/trailers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_trailers" />

        <include
            android:id="@+id/trailers"
            layout="@layout/trailers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailers" />

        <TextView
            android:id="@+id/tv_reviews"
            style="@style/MediumHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/reviews"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trailers" />

        <include
            android:id="@+id/reviews"
            layout="@layout/reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews" />

        <CheckBox
            android:id="@+id/cb_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/favorite"
            app:layout_constraintStart_toStartOf="@+id/tv_rating"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

        <TextView
            android:id="@+id/poster_title"
            style="@style/SmallPlaceholderTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:text=""
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
            app:layout_constraintEnd_toEndOf="@+id/iv_poster"
            app:layout_constraintStart_toStartOf="@+id/iv_poster"
            app:layout_constraintTop_toTopOf="@+id/iv_poster"
            app:layout_constraintVertical_bias="0.13"
            tools:text="Movie Title"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
            app:layout_constraintEnd_toEndOf="@+id/iv_poster"
            app:layout_constraintStart_toStartOf="@+id/iv_poster"
            app:layout_constraintTop_toTopOf="@+id/iv_poster" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
